--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -1,3 +1,84 @@
+/* google font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
+/* colors */
+:root {
+  --primary: #1aac83;
+  --error: #e7195a;
+}
+
+body {
+  box-sizing: border-box;
+  background: #eaeaea;
+  margin: 0;
+  font-family: "Poppins";
+}
+
+
+
+/* CARD */
+.blog-card {
+  position: relative;
+  height: 450px;
+  width: 450px;
+  overflow: hidden;
+  background-color: rgb(251, 251, 251);
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.blog-card:hover {
+  transform: scale(1.03);
+}
+
+.blog-image {
+  width: 100%;
+  max-height: 43%;
+  margin-bottom: 10px;
+  object-fit: cover;
+}
+
+.blog-title p {
+  font-family: "Merriweather", serif;
+  font-weight: 550;
+  text-align: left;
+  font-size: 25px;
+  padding: 0 45px;
+  color: rgb(35, 35, 35);
+}
+
+.blog-desc p {
+  text-align: left;
+  font-size: 17px;
+  padding: 0 45px;
+  color: rgb(35, 35, 35);
+}
+
+.blog-date p {
+  position: absolute;
+  bottom: 9px;
+  text-align: left;
+  font-size: 12px;
+  padding: 0 45px;
+  color: rgb(35, 35, 35);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 .postBlogForm {
   margin: auto;
   margin-top: 20vh;
@@ -5,33 +86,40 @@
   min-height: 30vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(255, 255, 255);
   border-radius: 12px;
   padding: 20px 30px;
 }
 
 .postBlogForm h3 {
+  font-size: 25px;
   text-align: center;
 }
 
 .postBlogForm div {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 16px;
   margin-bottom: 15px;
 }
 
 .postBlogForm input {
-  width: 80%;
-  margin-left: 27px;
+  width: 100%;
+  padding: 5px;
 }
 
 .postBlogForm textarea {
-  width: 80%;
-  margin-left: 5px;
+
 }
 
-.postBlogForm button {
-  text-align: center;
-  width: 13%;
+form button {
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .blogControls {
@@ -39,3 +127,4 @@
   align-items: center;
   justify-content: right;
 }
+*/
