--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -264,17 +264,23 @@ body {
 
 
 
+/* BLOG FORM */
 
+.blog-container {
+  z-index: 100;
+  height: 100vw;
+  width: 100vw;
+  background-color: #0000005f;
+  position: absolute;
+}
 
-
-
-
-/*
-.postBlogForm {
-  margin: auto;
-  margin-top: 20vh;
+.post-blog-form {
+  position: absolute;
+  z-index: 15;
+  left: 35vw;
+  top: 12vh;
   width: 30vw;
-  min-height: 30vh;
+  max-height: 80vh;
   display: flex;
   flex-direction: column;
   background-color: rgb(255, 255, 255);
@@ -282,40 +288,58 @@ body {
   padding: 20px 30px;
 }
 
-.postBlogForm h3 {
+.post-blog-form  h3 {
   font-size: 25px;
   text-align: center;
 }
 
-.postBlogForm div {
+.post-blog-form  div {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 16px;
   margin-bottom: 15px;
 }
 
-.postBlogForm input {
+.post-blog-form input {
   width: 100%;
   padding: 5px;
 }
 
-.postBlogForm textarea {
-
+.post-blog-form  textarea {
+  resize: none;
 }
 
-form button {
-  background: var(--light);
+.post-blog-form button {
+  background: var(--primary);
   border: 0;
-  color: #fff;
+  color: var(--light);
   padding: 10px;
   font-family: "Poppins";
   border-radius: 4px;
   cursor: pointer;
 }
 
+.post-blog-form button:hover {
+  background: var(--primary_hover);
+}
+
 .blogControls {
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: left;
 }
-*/
+
+.close-form {
+  position: absolute;
+  text-align: center;
+  padding: 3px;
+  right: 5%;
+  height: 39px;
+  background: rgb(255, 255, 255) !important;
+  border: 2px solid var(--primary) !important;
+  color: var(--primary) !important;
+}
+
+.close-form:hover {
+  background: rgb(244, 244, 244) !important;
+}
