--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -19,6 +19,11 @@ body {
   font-family: "Poppins";
 }
 
+.pages{
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
 
 
 /*temporary*/
@@ -225,6 +230,14 @@ body {
   background-color: var(--primary);
 }
 
+.navbar a:visited {
+  color: var(--light);
+}
+
+.navbar a {
+  text-decoration: none;
+}
+
 .navbar h4 {
   font-weight: 400;
   flex: 2;
@@ -240,11 +253,14 @@ body {
 }
 
 .navbar .nav-button {
-  width: 20px;
+  width: 250px;
   flex: 1;
+  display: flex;
+  align-items: center;
 }
 
 .navbar .nav-button button {
+  height: 50px;
   background: var(--light);
   color: var(--primary);
   border: 2px solid var(--primary);
@@ -259,6 +275,25 @@ body {
 
 .navbar .nav-button button:hover {
   background: var(--light_hover);
+}
+
+.navbar .logged-in {
+  display: flex;
+}
+
+.navbar .logged-out {
+  display: flex;
+  gap: 50px;
+  padding: 10px 90px;
+  color: var(--light);
+  cursor: pointer;
+  font-weight: 600;
+  transition: background 0.2s ease-in-out;
+}
+
+.logged-out a:visited {
+  color: white;
+  text-decoration: none;
 }
 
 
