--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -141,6 +141,11 @@ body {
   text-align: center;
 }
 
+.no-blogs {
+  margin: 10vh 50vw;
+  width: 100%;
+}
+
 /*Title Size changes*/
 @media (max-height: 670px) {
   .carousel-title {
@@ -421,4 +426,72 @@ pre {
   max-width: 40vw;
   max-height: 40vh;
   box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.307);
+}
+
+
+
+
+/*LOGIN AND SIGNUP*/
+form.signup, form.login {
+  max-width: 400px;
+  height: 450px;
+  margin: 20vh auto 0 auto;
+  padding: 30px;
+  background: var( --primary);
+  color: var(--light_hover);
+  border-radius: 4px;
+}
+
+form.signup {
+  height: 500px;
+  margin: 15vh auto 0 auto;
+}
+
+form.login h3, form.signup h3 {
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+form.signup h3 {
+  margin-bottom: 10px;
+}
+
+.login-button, .signup-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+form.login button, form.signup button {
+  margin-top: 10px;
+  height: 40px;
+  padding: 10px 20px;
+  width: 100px;
+  font-weight: bold;
+  color: var(--primary);
+  background-color: var(--light_hover);
+  border: solid 3px var(--primary);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form.login div, form.signup div {
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+form.login label, form.signup label {
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+form.login input, form.signup input {
+  padding: 9px;
+}
+
+form.login p, form.signup p {
+  text-align: center;
 }
