--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -20,7 +20,6 @@ body {
 }
 
 .pages{
-  max-width: 1500px;
   margin: 0 auto;
 }
 
@@ -83,7 +82,7 @@ body {
 
 .carousel-bottom-dash {
   position: absolute;
-  bottom: 10.5vh;
+  bottom: 35px;
   left: 5vw;
   width:87vw;
   height: 2px;
@@ -171,7 +170,7 @@ body {
 /* CARD */
 .blog-card {
   position: relative;
-  height: 380px;
+  height: 450px;
   width: 380px;
   overflow: hidden;
   background-color: rgb(251, 251, 251);
@@ -318,7 +317,7 @@ body {
   position: absolute;
   z-index: 15;
   left: 17.5vw;
-  top: 12vh;
+  top: 10vh;
   width: 65vw;
   max-height: 80vh;
   display: flex;
@@ -331,6 +330,7 @@ body {
 .post-blog-form  h3 {
   font-size: 25px;
   text-align: center;
+  margin-bottom: 0px;
 }
 
 .post-blog-form  label {
@@ -347,10 +347,13 @@ body {
 .post-blog-form input {
   width: 98%;
   padding: 5px;
+  font-family: 'Poppins';
 }
 
 .post-blog-form  textarea {
   resize: none;
+  font-family: 'Poppins';
+  padding: 5px;
 }
 
 .post-blog-form button {
