--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -319,7 +319,7 @@ body {
   left: 17.5vw;
   top: 10vh;
   width: 65vw;
-  max-height: 80vh;
+  max-height: 90vh;
   display: flex;
   flex-direction: column;
   background-color: rgb(255, 255, 255);
@@ -391,6 +391,36 @@ body {
   background: rgb(244, 244, 244) !important;
 }
 
+input[type="file"] {
+  display: none;
+}
+
+.custom-upload-btn {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  line-height: 1; 
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+}
+
+.file-label {
+  margin-left: 10px;
+}
+
+.blog-post-error {
+  color: var(--error);
+  text-align: center;
+}
+
+
+
 
 
 /*BLOG PAGE*/
@@ -421,8 +451,11 @@ pre {
 }
 
 .blog-page p {
+  white-space: pre-wrap;
+  font-family: 'Poppins';
   text-align: left;
   max-width: 70vw;
+  
 }
 
 .blog-page img {
