fixed upload and update bugs, started function for ignoring duplicate images

--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -86,6 +86,10 @@ body {
   cursor: pointer;
 }
 
+.carousel-title a {
+  text-decoration: none;
+}
+
 .carousel-title div h1:hover {
   text-decoration: underline;
 }
