--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -647,6 +647,7 @@ form.login p, form.signup p {
 }
 
 .account-page h1 {
+  text-align: center;
   font-weight: 500;
   font-size: 3.3em;
   font-family: 'Noto Serif', serif;
@@ -655,6 +656,7 @@ form.login p, form.signup p {
 }
 
 .account-page h2 {
+  text-align: center;
   font-weight: 500;
   font-size: 1.5em;
   font-family: 'Noto Serif', serif;
@@ -663,6 +665,7 @@ form.login p, form.signup p {
 }
 
 .account-page h3 {
+  text-align: center;
   font-weight: 600;
   font-size: 1em;
   font-family: 'Noto Serif', serif;
@@ -671,6 +674,7 @@ form.login p, form.signup p {
 }
 
 .account-page label {
+  text-align: center;
   margin-bottom: 7px;
   font-size: .8em;
   color: var(--primary)
@@ -695,4 +699,77 @@ form.login p, form.signup p {
 
 .account-page .account-controllers button:hover {
   background-color: var(--light);
+}
+
+
+
+
+
+/*ACCOUNT UPDATE*/
+.update-container {
+  position: fixed;
+  z-index: 100;
+  height: 100vw;
+  width: 100vw;
+  background-color: #0000005f;
+  margin-top: -10%;
+}
+
+.update-account-form {
+  position: fixed;
+  z-index: 15;
+  left: 13.5vw;
+  top: 20vh;
+  width: 65vw;
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  border-radius: 12px;
+  padding: 20px 30px;
+}
+
+.update-account-form  h3 {
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.update-account-form  label {
+  text-align: right;
+}
+
+.update-account-form  div {
+  display: grid;
+  grid-template-columns: 1fr 6fr;
+  gap: 16px;
+  margin-bottom: 15px;
+}
+
+.update-account-form input {
+  width: 98%;
+  padding: 5px;
+  font-family: 'Poppins';
+}
+
+.update-account-form button {
+  background: var(--primary);
+  border: 0;
+  color: var(--light);
+  padding: 8px;
+  font-family: "Poppins";
+  font-size: 17px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.update-account-form button:hover {
+  background: var(--primary_hover);
+}
+
+.update-account-form p {
+  text-align: center;
+  font-style: italic;
+  font-size: .8em;
+  color: var(--primary);
 }
