minor bug fixes

--- a/frontend/BlogSite/src/index.css
+++ b/frontend/BlogSite/src/index.css
@@ -400,6 +400,11 @@ body {
   justify-content: left;
 }
 
+.blogControls a {
+  color: white;
+  text-decoration: none;
+}
+
 .close-form {
   position: absolute;
   display: flex;
